# AIDRIN

./: README.md  pyproject.toml
aidrin/: __init__.py  cli.py  ingestion.py  inspector.py  metrics.py
tests/: test_ingestion.py  test_inspector.py
