[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aidrin"
version = "0.1.0"
description = "AI Data Readiness Inspector (AIDRIN) prototype with extensible ingestion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]

[project.optional-dependencies]
io = [
  "h5py>=3.8",
  "uproot>=5.2",
  "zarr>=2.16",
  "pyarrow>=12.0",
]
ml = [
  "scikit-learn>=1.3",
]

[project.scripts]
aidrin = "aidrin.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aidrin*"]
